<resources>
    <string name="app_name">Management Tiket</string>
    <string name="hello_blank_fragment">hello_blank_fragment</string>
    <string name="snackBar_ok">OK</string>
    <string name="btn_is_login">Sedang Login…</string>
    <string name="btn_is_register">Sedang Mendaftar…</string>
    <string name="btn_is_order">Sedang Order…</string>
    <string name="btn_is_payment">Melakukan Pembayaran…</string>
    <string name="btn_pay">Bayar</string>
    <string name="btn_login">Masuk</string>
    <string name="btn_register">Daftar</string>
    <string name="btn_order">Order</string>
    <string name="btn_buy_ticket">Beli Tiket</string>
    <string name="payment_success_message">Pembayaran Berhasil</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="title_login_page">Halaman Login</string>
    <string name="title_register_page">Halaman Pendaftaran</string>
    <string name="err_message">Gagal</string>
    <string name="img_content_desc">Image</string>
    <string name="header_title">Header Title</string>
    <string name="header_text">Header Text</string>
    <string name="label_dummy_from">from</string>
    <string name="label_dummy_to">To</string>
    <string name="label_dummy_sum">sum_price</string>
    <string name="label_dummy_bank_id">bank_id</string>
    <string name="label_dummy_ticket_count">ticket_count</string>
    <string name="label_dummy_code_fixed">code_fixed</string>
    <string name="label_dummy_time">Time</string>
    <string name="label_dummy_name">Name</string>
    <string name="payment_title_confirmation">konfirmasi order dan bayar</string>
    <string name="rb_bank_transfer">Transfer Bank</string>
    <string name="hint_select_bank">Pilih Bank</string>
    <string name="hint_bank_code">Masukan No Rekening</string>
    <string name="hint_total_pay">Total yang harus dibayar :</string>
    <string name="label_dummy_price">Rp. 400,00</string>
    <string name="label_dummy_bank_item">BCA</string>
    <string name="label_dummy_stock">Stok : 265</string>
    <string name="hint_payment_method">Pilih Metode Pembayaran</string>
    <string name="hint_ticket_count_order">Masukan jumlah tiket yang ingin dipesan</string>
    <string name="hint_password_length">Password minimal 8 karakter</string>
    <string name="label_dummy_count_order">1</string>
    <string name="btn_decrease">decrease</string>
    <string name="btn_increase">increase</string>
    <string name="label_payment_page">Halaman Pembayaran</string>
    <string name="label_payment_desc">konfirmasi order dan bayar</string>
    <string name="label_payment_method">Metode Pembayaran</string>
    <string name="hint_name">Nama</string>
    <string name="hint_register_exists_account">sudah punya akun ?</string>
    <string name="hint_from">Asal</string>
    <string name="hint_to">Tujuan</string>
    <string name="label_loading">Loading…</string>
    <string name="label_dummy_status">Status</string>
    <string name="btn_checkout">checkout</string>
    <string name="btn_order_detail">Detail Order</string>
    <string name="btn_logout">Keluar</string>
    <string name="label_dummy_ticket">Tiket</string>
    <string name="label_search_ticket">Cari Tiket</string>
    <string name="txt_tap_to_retry">Tap to Retry</string>
</resources>