<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_ticket_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_dummy_from"
            app:layout_constraintBottom_toTopOf="@+id/tv_ticket_to"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_ticket_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:text="@string/label_dummy_to"
            app:layout_constraintBottom_toTopOf="@+id/tv_ticket_time"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_ticket_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_dummy_time"
            app:layout_constraintBottom_toTopOf="@+id/tv_ticket_price"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_ticket_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_dummy_price"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_ticket_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_dummy_stock"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_ticket_time" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>