<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.tickets.fragments.DetailTicketFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_close"
            app:title="Detail Tiket" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/tv_ticket_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/label_dummy_from"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <TextView
        android:id="@+id/tv_ticket_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_dummy_to"
        app:layout_constraintStart_toStartOf="@+id/tv_ticket_from"
        app:layout_constraintTop_toBottomOf="@+id/tv_ticket_from" />

    <TextView
        android:id="@+id/tv_ticket_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_dummy_time"
        app:layout_constraintStart_toStartOf="@+id/tv_ticket_to"
        app:layout_constraintTop_toBottomOf="@+id/tv_ticket_to" />

    <TextView
        android:id="@+id/tv_ticket_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_dummy_price"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/tv_ticket_stock"
        app:layout_constraintTop_toTopOf="@+id/tv_ticket_from" />

    <TextView
        android:id="@+id/tv_ticket_stock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/label_dummy_stock"
        app:layout_constraintBottom_toBottomOf="@+id/tv_ticket_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_ticket_time" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="#A5A5A5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ticket_stock" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/hint_ticket_count_order"
        app:layout_constraintBottom_toTopOf="@+id/btn_decrease"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_ticket_count_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/label_dummy_count_order"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_buy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btn_decrease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/btn_decrease"
        android:src="@drawable/ic_horizontal_line"
        app:layout_constraintBottom_toBottomOf="@+id/tv_ticket_count_user"
        app:layout_constraintStart_toStartOf="@+id/btn_buy"
        app:layout_constraintTop_toTopOf="@+id/tv_ticket_count_user" />

    <ImageButton
        android:id="@+id/btn_increase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/btn_increase"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="@+id/tv_ticket_count_user"
        app:layout_constraintEnd_toEndOf="@+id/btn_buy"
        app:layout_constraintTop_toTopOf="@+id/tv_ticket_count_user" />

    <Button
        android:id="@+id/btn_buy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/btn_order"
        app:icon="@drawable/ic_add"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>